--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "scripts": {
-    "dev": "vitepress --host 0.0.0.0 dev docs",
+    "dev": "vitepress --port 5175 --host 0.0.0.0 dev docs",
     "build": "vitepress build docs",
-    "preview": "vitepress preview docs"
+    "preview": "vitepress --port 4001 --host 0.0.0.0 preview docs"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.3",
+    "@tsconfig/recommended": "^1.0.7",
     "@vue/tsconfig": "^0.5.1",
-    "vitepress": "^1.0.0-rc.35"
-  },
-  "dependencies": {
-    "http-status-codes": "^2.3.0"
+    "vitepress": "^1.3.2"
   }
 }
